# Proyecto_AI

./: .gitignore  INFORME_PROYECTO.md  README.md  app.py  pyproject.toml  requirements.txt
reportes/: comparacion_cence_modelo.csv  comparacion_cence_modelo.html  reporte_proyecto.md  reporte_proyecto.tex
reports/: reporte_proyecto.md
src/electroagent/: __init__.py  agent.py  agente.py  cleaning.py  cli.py  context.py  data.py  datos.py  features.py  metrics.py  models.py  stats.py  visualization.py
tests/: test_agent.py  test_agente.py  test_cleaning.py  test_context.py
