[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "electroforecast-agent"
version = "0.1.0"
description = "Agente para analisis y prediccion de demanda electrica con datos CENCE."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "requests>=2.32",
    "scikit-learn>=1.5",
    "plotly>=5.24",
    "streamlit>=1.37",
    "pytest>=8.3",
]

[project.scripts]
electroagent = "electroagent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
