[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agente-prediccion-electrica"
version = "0.1.0"
description = "Agente para análisis y predicción de demanda eléctrica con datos CENCE."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "requests>=2.32",
    "plotly>=5.24",
    "kaleido>=0.2",
    "streamlit>=1.37",
    "pytest>=8.3",
]

[project.scripts]
electroagent = "electroagent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
